# s3_to_milvus

./: .dockerignore  .gitignore  Dockerfile  README.md  chunk_params.txt  chunks_params.txt  lamba.py  main.py  pyproject.toml  test.py
data/korea_university/parsed_data/: 02-문과대학-01.국어국문.pdf.html
lamda/: lambda_function.py
