[tool.poetry]
name = "s3-to-milvus"
version = "0.1.0"
description = ""
authors = ["1nsdiewill <yiguha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
requests = "^2.32.3"
aiofiles = "^24.1.0"
pymilvus = "^2.4.8"
boto3 = "^1.35.49"
langchain = "^0.3.4"
pypdf2 = "^3.0.1"
langchain-community = "^0.3.3"
bs4 = "^0.0.2"
openai = "^1.52.2"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.4"
pdfplumber = "^0.11.5"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
